main-menu (0.062) UNRELEASED; urgency=low

  * Translators: do not modify this changelog to record changes you make to
    po files. A record of your contributions will be added to the changelog
    at package release time by the output-l10n-changes program.


 -- Christian Perrier <bubulle@kheops.frmug.org>  Mon, 22 Mar 2004 19:46:55 +0100

main-menu (0.061) unstable; urgency=low

  * Bastian Blank
    - Use the permissive dependency resolver.
    - Don't try to set the title of a non-menu-item.
    - Build-Depend agains libdebian-installer4-dev (>= 0.20).

 -- Bastian Blank <waldi@debian.org>  Mon, 15 Mar 2004 11:01:42 +0100

main-menu (0.060) unstable; urgency=low

  * Joey Hess
    - Move the 900 constant out the the .h.
  * Translations
    - Dafydd Harries
      - Added Welsh translation (cy.po)

 -- Joey Hess <joeyh@debian.org>  Sat, 13 Mar 2004 00:10:35 -0500

main-menu (0.059) unstable; urgency=low

  * Joshua Kwan
    - Don't default to packages which are 'earlier' than the last
      successfully configured package that has a value of less
      than 900 (any higher are the packages that never get defaulted
      to.), closes: #224633
    - Add self to Uploaders.

 -- Joshua Kwan <joshk@triplehelix.org>  Mon,  8 Mar 2004 18:27:12 -0800

main-menu (0.058) unstable; urgency=low

  * Translations
    - Bartosz Fenski
      - Updated Polish translation (pl.po)
    - Ming Hua
      - Initial Traditional Chinese translation (zh_TW.po), by Tetralet
      - Updated Traditional Chinese translation (zh_TW.po), by Tetralet
    - Håvard Korsvoll
      - Updated Norwegian, nynorsk translation (nn.po).
    - Eddy Petrisor
      - Initial Romanian translation (ro.po)
    - Håvard Korsvoll
      - Updated Norwegian, bokmål translation, (nb.po). From Axel Bojer

 -- Joey Hess <joeyh@debian.org>  Tue,  2 Mar 2004 13:12:38 -0500

main-menu (0.057) unstable; urgency=low

  * Denis Barbier
    - When a package is reconfigured, set debconf/showold to true and