@@ -243,7 +243,6 @@ di_system_package *show_main_menu(di_packages *packages, di_packages_allocator *
 	/* Make debconf show the menu and get the user's choice. */
 	debconf_settitle(debconf, "debian-installer/main-menu-title");
 	debconf_capb(debconf);
-	debconf_fset(debconf,  MAIN_MENU, "seen", "false");
 	debconf_subst(debconf, MAIN_MENU, "MENU", menu);
 	if (menudefault) {
 		menu_entry(debconf, language, menudefault, buf, sizeof (buf));
@@ -361,7 +360,6 @@ static int satisfy_virtual(di_system_package *p) {
 		if (is_menu_item) {
 			char *priority = "medium";
 			/* Only let the user choose if one of them is a menu item */
-			debconf_fset(debconf, MISSING_PROVIDE, "seen", "false");
 			if (defpkg != NULL) {
 				menu_entry(debconf, language, defpkg, buf, sizeof(buf));
 				debconf_set(debconf, MISSING_PROVIDE, buf);
@@ -441,8 +439,6 @@ static void set_package_title(di_system_package *p) {
 
 int do_menu_item(di_system_package *p) {
 	char *configcommand;
-	const char *showold_template = "debconf/showold";
-	char *showold = NULL;
 	int ret = 0;
 
 	di_log(DI_LOG_LEVEL_DEBUG, "Menu item '%s' selected", p->p.package);
@@ -451,22 +447,12 @@ int do_menu_item(di_system_package *p) {
 		set_package_title(p);
 
 		/* The menu item is already configured, so reconfigure it. */
-		debconf_get(debconf, showold_template);
-		if (debconf->value)
-			showold = strdup(debconf->value);
-		debconf_set(debconf, showold_template, "true");
 		if (asprintf(&configcommand, "exec udpkg --configure --force-configure %s", p->p.package) == -1) {
 			return 0;
 		}
 		ret = di_exec_shell_log(configcommand);
 		ret = di_exec_mangle_status(ret);
 		free(configcommand);
-		if (showold) {
-			debconf_set(debconf, showold_template, showold);
-			free(showold);
-		} else {
-			debconf_reset(debconf, showold_template);
-		}
 		check_special(p);
 		if (ret)
 			di_log(DI_LOG_LEVEL_WARNING, "Reconfiguring '%s' failed with error code %d", p->p.package, ret);
