@@ -1,5 +1,11 @@
 main-menu (0.062) UNRELEASED; urgency=low
 
+  * Joey Hess
+    - Backed out Denis's showold setting code of version 0.057. cdebconf's
+      new seen flag setting behavior (it never sets it) makes this
+      unnecessary.
+    - Don't set seen flags of main-menu's own templates, either.
+
   * Translators: do not modify this changelog to record changes you make to
     po files. A record of your contributions will be added to the changelog
     at package release time by the output-l10n-changes program.
